...
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/EmailLogin"
            android:hint="Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/black"
            android:text="example@gmail.com"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="24dp"
            android:inputType="textEmailAddress"
            app:met_baseColor="@android:color/holo_green_dark"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="20"
...
            app:met_singleLineEllipsis="true"


            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/Passsword"
            android:hint="Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/black"
            android:text="834623hf"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="24dp"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/holo_green_dark"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
...
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/holo_green_dark"
            />

        <Button
            android:id="@+id/LoginSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/ToSignUp"
            android:textColor="@android:color/white" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogleSignIn"
            android:layout_width="220dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/signin_with_google"
            app:colorScheme="auto"
...
