...
            android:layout_marginBottom="54dp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/signup"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/SigninTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="Already Have an Account?"
            android:textColor="@android:color/holo_green_dark" />

    </LinearLayout>



...
